--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
+  <link rel="icon" type="image/jpg" sizes="190×190" href="人民小学.jpg"/>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>人民小学|2020601应届毕业生</title>
-  <link rel="stylesheet" href="//www.mdui.org/source/dist/css/mdui.min.css"/>
+<link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/css/mdui.min.css">
 </head>
 <body>
 <center>
@@ -23,6 +24,8 @@
   </div>
 </div>
 
-<script src="//www.mdui.org/source/dist/js/mdui.min.js"></script>
-</body>
+  <script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/js/mdui.min.js">
+      </script>
+
+  </body>
 </html>
