--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
 <head>
   <link rel="icon" type="image/jpg" sizes="190×190" href="人民小学.jpg"/>
+  
+  <audio autoplay="autoplay"><source src="致身处孤岛的你.mp3">
+   
+   </audio>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>人民小学|2020601应届毕业生</title>
 <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/css/mdui.min.css">
 </head>
-<body>
+
+   <body background="背景(1).jpg"    
+            style=" background-repeat:no-repeat ;
+   background-size:100% 100%; 
+      background-attachment:fixed;" >
+  
+  <body>
 <br>
   <center>
   <h2>人民小学|2020601应届毕业生</h2>
