--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.3/css/mdui.min.css">
 </head>
 
-   <body background="背景(1).jpg"    
+   <body background="https://2007charlie.github.io/背景.jpg"    
             style=" background-repeat:no-repeat ;
    background-size:100% 100%; 
       background-attachment:fixed;" >
