--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 <div class="mdui-appbar">
   <div class="mdui-toolbar mdui-color-indigo">
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="javascript:;" class="mdui-typo-title">首页</a>
+    <a href="index.html" class="mdui-typo-title">首页</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="javascript:;" class="mdui-typo-title">公告</a>
+    <a href="公告.html" class="mdui-typo-title">公告</a>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="javascript:;" class="mdui-typo-title">成员</a>
+    <a href="联系.html" class="mdui-typo-title">联系</a>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="javascript:;" class="mdui-typo-title">照片</a>
+    <a href="照片.html" class="mdui-typo-title">照片</a>
   </div>
 </div>
 
