--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
      <br>
 <footer>     
   <center>
-     <div class="mdui-typo-caption-opacity">©&nbsp;桐乡市实验小学教育集团人民小学&nbsp;2020届601</div>
+     <div class="mdui-typo-caption-opacity">©&nbsp;桐乡市实验小学教育集团人民小学&nbsp;2020.601</div>
         </center>
               </footer>
 </html>
