--- a/联系.html
+++ b/联系.html
@@ -132,4 +132,10 @@
       </script>
 
   </body>
+      <br>
+<footer>     
+  <center>
+     <div class="mdui-typo-caption-opacity">©&nbsp;桐乡市实验小学教育集团人民小学&nbsp;2020届601</div>
+        </center>
+              </footer>
 </html>
