--- a/联系.html
+++ b/联系.html
@@ -135,7 +135,7 @@
       <br>
 <footer>     
   <center>
-     <div class="mdui-typo-caption-opacity">©&nbsp;桐乡市实验小学教育集团人民小学&nbsp;2020届601</div>
+     <div class="mdui-typo-caption-opacity">©&nbsp;桐乡市实验小学教育集团人民小学&nbsp;2020.601</div>
         </center>
        <br>
               </footer>
