--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="icon" type="image/jpg" sizes="190×190" href="人民小学.jpg"/>
   
-  <audio autoplay="autoplay"><source src="致身处孤岛的你.mp3">
+  <audio autoplay="autoplay"><source src="同桌的你.mp3">
    
    </audio>
   
