--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="index.html" class="mdui-typo-title">首页</a>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <a href="公告.html" class="mdui-typo-title">公告</a>
+    <a href="留言.html" class="mdui-typo-title">留言</a>
          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="照片.html" class="mdui-typo-title">照片</a>
      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
